src/deployments/ingress-example/deployment.yaml
####################################
#
#   #     #                        
#   ##    #  ####  # #    # #    # 
#   # #   # #    # # ##   #  #  #  
#   #  #  # #      # # #  #   ##   
#   #   # # #  ### # #  # #   ##   
#   #    ## #    # # #   ##  #  #  
#   #     #  ####  # #    # #    #
#
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-example
  labels:
    app: ingress-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-example
  template:
    metadata:
      labels:
        app: ingress-example
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: mysite-html

####################################
#
#     #####                                       
#    #     # ###### #####  #    # #  ####  ###### 
#    #       #      #    # #    # # #    # #      
#     #####  #####  #    # #    # # #      #####  
#          # #      #####  #    # # #      #      
#    #     # #      #   #   #  #  # #    # #      
#     #####  ###### #    #   ##   #  ####  ######
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-example-service
spec:
  type: ClusterIP
  selector:
    app: ingress-example
  ports:
    - protocol: TCP
      port: 80

####################################
#
#   ###                                           
#    #  #    #  ####  #####  ######  ####   ####  
#    #  ##   # #    # #    # #      #      #      
#    #  # #  # #      #    # #####   ####   ####  
#    #  #  # # #  ### #####  #           #      # 
#    #  #   ## #    # #   #  #      #    # #    # 
#   ### #    #  ####  #    # ######  ####   ####  
#
####################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.frontend.passHostHeader: "false"
    ingress.kubernetes.io/protocol: http
spec:
  rules:
  - host: kavanetes.kavanet.io
    http:
      paths:
      - path: /kavanet
        pathType: Prefix
        backend:
          service:
            name: ingress-example-service
            port: 
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: ingress-example-service
            port: 
              number: 80
      - path: /boop
        pathType: Prefix
        backend:
          service:
            name: ingress-example-service
            port: 
              number: 80

####################################
#
#   #####                                   #     #               
#  #     #  ####  #    # ###### #  ####     ##   ##   ##   #####  
#  #       #    # ##   # #      # #    #    # # # #  #  #  #    # 
#  #       #    # # #  # #####  # #         #  #  # #    # #    # 
#  #       #    # #  # # #      # #  ###    #     # ###### #####  
#  #     # #    # #   ## #      # #    #    #     # #    # #      
#   #####   ####  #    # #      #  ####     #     # #    # #      
#
####################################
